<resources>
    <string name="app_name">BlueChip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="future">The sole application  of our project is to contribute in saving electricity. We, as engineering students are determined to make a small contribution to mother nature.
We intend to make an automation system which can control almost any electrical appliances in our surroundings through a simple mobile application. Our project helps in developing a “green and clean” environment.
Through our project, we can also create a source of income for ourselves. Finding the right clients, who are determined in saving electricity and helping in the betterment of our mother nature would surely invest in our project.
Our project is also an implicit part of the current trend of “Global Technological Modernization” and “Complete Automation”. These are the areas where the future will drown itself in. There is a great scope for our project, in thepresent as well as the fast approaching rapidly modernising future!
</string>
    <string name="ubidots">Ubidots is an IoT Platform empowering innovators and industries to prototype and scale IoT projects to production. Use the Ubidots platform to send data to the cloud from any Internet-enabled device. You can then configure actions and alerts based on your real-time data and unlock the value of your data through visual tools. Ubidots offers a REST API that allows you to read and write data to the resources available: data sources, variables, values, events and insights. The API supports both HTTP and HTTPS and an API Key is required. Ubidots is an Internet of Things (IoT) data analytics and visualization company. We turn sensor data into information that matters for business-decisions, machine-to-machine interactions, educational research, and increase economization of global resources. Ubidots exists as an easy and affordable means to integrate the power of the IoT into your business or research.

Ubidots technology and engineering stack was developed to deliver a secure, white-glove experience for our users. Device friendly APIs (accessed over HTTP/MQTT/TCP/UDP protocols) provide a simple and secure connection for sending and retrieving data to and from our cloud service in real-time. Ubidots’ time-series backend services are performance optimized for IoT data storage, computation, and retrieval. Our application enablement platform supports interactive, real-time data visualization (widgets), and an IoT App Builder that allows developers to extend the platform with their own HTML/JS code for private customization when desired. Ubidots exists to empower your data from device to visualization.

Your data will be protected with two more replication, encrypted storage and optional TLS/SSL data support. You can also customize permission groups to each module of the platform, making sure the right information is shown to the right user.</string>
    <string name="gps">A GPS tracking unit is a navigation device normally carried by a moving vehicle or person that uses the Global Positioning System (GPS) to track the device\'s movements and determine its location. The recorded location data can either be stored within the tracking unit or transmitted to an Internet-connected device using the cellular (GPRS or SMS), radio, or satellite modem embedded in the unit. This allows the location to be displayed against a map backdrop either in real time or when analysing the track later, using GPS tracking software. Data tracking software is available for smartphones with GPS capability.</string>
    <string name="fan">Standalone fans are usually powered by an electric motors, often attached directly to the motor\'s output, with no gears or belts. The motor is either hidden in the fan\'s center hub or extends behind it. For big industrial fans, three-phase asynchronous motors are commonly used, placed near the fan and driving it through a belt and pulleys. Smaller fans are often powered by shaded pole AC motors, or brushed or brushless DC motors.</string>
    <string name="bulb">An incandescent light bulb, incandescent lamp or incandescent light globe is an electric light with a wire filament heated to such a high temperature that it glows with visible light (incandescence). The filament is protected from oxidation with a glass or fused quartz bulb that is filled with inert gas or a vacuum. In a halogen lamp, filament evaporation is slowed by a chemical process that redeposits metal onto the filament, thereby extending its life.</string>
    <string name="breadboard">A breadboard is a solderless device for temporary prototype with electronics and test circuit designs. Most electronic components in electronic circuits can be interconnected by inserting their leads or terminals into the holes and then making connections through wires where appropriate. The breadboard has strips of metal underneath the board and connect the holes on the top of the board. The metal strips are laid out as shown below.</string>
    <string name="nodemcu">NodeMCU is an open source IoT platform. It includes firmware which runs on the ESP8266 Wi-Fi SoC from Espressif Systems, and hardware which is based on the ESP-12 module. The term "NodeMCU" by default refers to the firmware rather than the development kits. The firmware uses the Lua scripting language. It is based on the eLua project, and built on the Espressif Non-OS SDK for ESP8266. It uses many open source projects, such as lua-cjson and SPIFFS.</string>
</resources>
